# aioli

./: .editorconfig  .gitignore  .travis.yml  404.html  LICENSE  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
aioli/: __init__.py  __main__.py  app.py  component.py  config.py  consts.py  db.py  exceptions.py  log.py  manager.py  package.py  registry.py  schema.py  service.py  settings.py  utils.py
aioli/commands/: __init__.py  root.py
aioli/controller/: __init__.py  base.py  consts.py  decorators.py  injector.py  registry.py  schema.py  schemas.py
aioli/core/: __init__.py  app.py  error.py  manager.py  package.py  settings.py
aioli/package/: __init__.py  _component.py  base.py
aioli/package/controller/: __init__.py  base.py  consts.py  decorators.py  schema.py
aioli/package/service/: base.py  db.py  http.py
aioli/service/: base.py  db.py
aioli/utils/: db.py  http.py  settings.py
docs/: conf.py  extensions.rst  general.rst  index.md  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: application.rst  config.rst  package.rst  service.rst  transformation.rst
docs/api/controller/: http.rst  index.rst  ws.rst
docs/config/: instance.rst
docs/core/: application.rst
docs/examples/: about.rst
docs/examples/config/: index.rst  schema.rst
docs/examples/service/: index.rst  nested.rst
docs/general/: license.rst
docs/package/: controller.rst
docs/package/services/: base.rst
docs/setup/: configure.rst  deploy.rst  install.rst
docs_old/: Makefile  conf.py
search/: search_index.json
tests/: conftest.py
tests/ctrl/: test_register.py  test_route.py  test_schema.py
