[tool.poetry]
name = "aioli"
version = "0.3.0"
description = "Non-blocking Web API Framework and Toolkit"
authors = ["Robert Wikman <rbw@vault13.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
starlette = "^0.12.0b3"
uvloop = "^0.12.1"
uvicorn = "^0.6.1"
gunicorn = "^19.9.0"
marshmallow = "^3.0.0rc3"
ujson = "^1.35"


[tool.poetry.dev-dependencies]
twine = "^1.13"
sphinx = "^2.1.1"
pytest = "^4.4.0"
pytest-cov = "^2.7.1"
autoflake = "^1.3"
codecov = "^2.0.15"
black = { version = "^19.3b0", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
